sampler/chain/projects/libgdx/selected.txt
/Users/nima/Developer/NullAwayFixer/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/g3d/particles/ParticleShader.java:244: error: [NullAway] (INDEX= 1287) (Covered) assigning @Nullable expression to @NonNull field
		renderable = null;
		           ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/scenes/scene2d/utils/DragAndDrop.java:65: error: [NullAway] (INDEX= 1236) (Covered) assigning @Nullable expression to @NonNull field
				payload = source.dragStart(event, getTouchDownX(), getTouchDownY(), pointer);
				        ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/g3d/utils/shapebuilders/PatchShapeBuilder.java:57: error: [NullAway] (INDEX= 882) (Covered) passing @Nullable parameter 'null' where @NonNull is required
		build(builder, vertTmp1.set(null).setPos(x00, y00, z00).setNor(normalX, normalY, normalZ).setUV(0f, 1f),
		                            ^

	(see http://t.uber.com/nullaway )
/Users/nima/Developer/NullAwayFixer/Projects/libgdx/gdx/src/com/badlogic/gdx/scenes/scene2d/ui/Skin.java:498: error: [NullAway] (INDEX= 451) (Covered) passing @Nullable parameter 'null' where @NonNull is required
		json.setTypeName(null);
		                 ^

	(see http://t.uber.com/nullaway )
/home/nima/Developer/AutoFixer/Evaluation/Projects/libgdx/gdx/src/com/badlogic/gdx/graphics/glutils/FacedCubemapData.java:68: error: [NullAway] (INDEX= 1022) (Covered) passing @Nullable parameter 'null' where @NonNull is required
			height, format), null, false, true), new PixmapTextureData(new Pixmap(width, depth, format), null, false, true),
			                 ^

	(see http://t.uber.com/nullaway )
